--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.blurred-background {
+    background-image: url('/bitcoinadultanime.jpg');
+    background-size: cover;
+    background-position: center center;
+}
