--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,8 @@
     background-position: center center;
     background-repeat: no-repeat;
 }
+
+.base-color {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0) 0%, rgba(255, 79, 249, 0.07) 50%);
+}
