--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,122 @@
 @tailwind components;
 @tailwind utilities;
 
-.blurred-background {
-    background-image: url('/bitcoinadultanime.png');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-
 .base-color {
     background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(2, 0, 36, 0) 0%, rgba(255, 79, 249, 0.07) 50%);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0) 0%, rgba(255, 80, 49, 0.03) 50%);
+}
+
+@keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+section {
+    z-index: 1;
+    position: relative;
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #ff50310b;
+    overflow: hidden;
+    z-index: 0;
+}
+
+.background span {
+    width: 15vmin;
+    height: 15vmin;
+    border-radius: 15vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 45;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+    color: #FFACAC;
+    top: 73%;
+    left: 32%;
+    animation-duration: 19s;
+    animation-delay: -48s;
+    transform-origin: -13vw 15vh;
+    box-shadow: -30vmin 0 4.09568365526305vmin currentColor;
+}
+
+.background span:nth-child(1) {
+    color: #c331b4;
+    top: 99%;
+    left: 85%;
+    animation-duration: 31s;
+    animation-delay: -41s;
+    transform-origin: -17vw -2vh;
+    box-shadow: -30vmin 0 4.252436019822243vmin currentColor;
+}
+
+.background span:nth-child(2) {
+    color: #FFACAC;
+    top: 42%;
+    left: 73%;
+    animation-duration: 25s;
+    animation-delay: -39s;
+    transform-origin: 25vw -9vh;
+    box-shadow: -30vmin 0 4.215101702941443vmin currentColor;
+}
+
+.background span:nth-child(3) {
+    color: #b61680;
+    top: 22%;
+    left: 82%;
+    animation-duration: 55s;
+    animation-delay: -1s;
+    transform-origin: 12vw -23vh;
+    box-shadow: -30vmin 0 4.49742472175611vmin currentColor;
+}
+
+.background span:nth-child(4) {
+    color: #ed0fa7;
+    top: 67%;
+    left: 66%;
+    animation-duration: 45s;
+    animation-delay: -32s;
+    transform-origin: -20vw 17vh;
+    box-shadow: 30vmin 0 4.494588787029599vmin currentColor;
+}
+
+.background span:nth-child(5) {
+    color: #E45A84;
+    top: 94%;
+    left: 8%;
+    animation-duration: 35s;
+    animation-delay: -22s;
+    transform-origin: -22vw 5vh;
+    box-shadow: -30vmin 0 3.9665315903273783vmin currentColor;
+}
+
+.background span:nth-child(6) {
+    color: #1bde14;
+    top: 62%;
+    left: 11%;
+    animation-duration: 20s;
+    animation-delay: -27s;
+    transform-origin: 14vw -12vh;
+    box-shadow: 30vmin 0 4.034750199398456vmin currentColor;
+}
+
+.background span:nth-child(7) {
+    color: #d3f209;
+    top: 22%;
+    left: 78%;
+    animation-duration: 37s;
+    animation-delay: -31s;
+    transform-origin: 19vw -16vh;
+    box-shadow: 30vmin 0 4.658723486882573vmin currentColor;
 }
